--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DATABASE = auction
 DATABASE_HOST = localhost
 DATABASE_USER = root
 DATABASE_PASSWORD = 
+JWT_SECRET = mysecretpassword
+JWT_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES = 90
